# dataidea-science

./: .gitignore  .pypirc  404.html  CNAME  README.md  TODO.md  index.html  markdown_section.txt  mkdocs.yml  nobel_prize_laureates_exercise.ipynb  pyproject.toml  requirements-deploy.txt  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  styles.css
.github/workflows/: ci.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
DSA/01_introduction/: index.html
DSA/02_arrays_and_lists/: index.html
DSA/03_stacks_and_queues/: index.html
DSA/04_linked_lists/: index.html
DSA/05_trees/: index.html
DSA/06_hash_tables/: index.html
Markdown/: index.html
Python/: 00_outline.html  00_python_programming_outline.html  01_basics.html  02_variables.html  03_numbers.html  03_strings.html  04_operators.html  05_containers.html  06_flow_control.html  07_advanced.html  08_modules.html  09_file_handling.html  11_python_objective_quiz.html  12_true_or_false_quiz.html  13_end_of_course_exercise.html  miscellaneous_exerise.html
Python-Data-Analysis/: outline.html  python_data_analysis_outline.html
Pytorch-Deep-Learning/: outline.html  oxdeep-learning-intro.html
X-Interview/: data_scientists_interview.html
books/: index.html
dataidea/: _modidx.py  models.py  quickstart.html  statistics.py
dataidea_science/: __init__.py  _modidx.py  plots.py
docs/: books.md  index.md
nbs/: 404.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  styles.css
overrides/: main.html
search/: search_index.json
styles/: custom.css
(+622 files in other folders)
